
NULL =

## for bugzilla 134747 and 123003
##CFLAGS += -Wall
##if ENABLE_WERROR
##  CFLAGS += -Werror
##endif

bin_PROGRAMS = conglomerate

if ENABLE_PRINTING
printing_sources = \
  fo.h                      \
  fo-parser-result.c        \
  fo-print-context.c 	    \
  fo-rect.c                 \
  fo-solver-result.c        \
  fo-tests.c                \
  $(NULL)
else
printing_sources = 
endif

conglomerate_SOURCES =      \
  global.h                  \
  cong-app.h                \
  cong-attribute-editor.h   \
  cong-attribute-editor-cdata.h \
  cong-attribute-editor-enumeration.h \
  cong-attribute-wrapper.h   \
  cong-attribute-wrapper-check-button.h \
  cong-attribute-wrapper-radio-button.h \
  cong-command.h            \
  cong-command-history.h    \
  cong-dialog.h             \
  cong-dispspec.h           \
  cong-dispspec-gxx.h       \
  cong-dispspec-element.h   \
  cong-dispspec-element-gxx.h \
  cong-dispspec-registry.h  \
  cong-document.h           \
  cong-document-traversal.h \
  cong-dtd.h                \
  cong-edit-find-and-replace.h \
  cong-editor-area.h        \
  cong-editor-area-bin.h    \
  cong-editor-area-border.h \
  cong-editor-area-composer.h \
  cong-editor-area-container.h \
  cong-editor-area-entity-decl.h \
  cong-editor-area-entity-ref.h \
  cong-editor-area-expander.h \
  cong-editor-area-flow-holder.h \
  cong-editor-area-flow-holder-blocks.h \
  cong-editor-area-flow-holder-inlines.h \
  cong-editor-area-flow-holder-single.h \
  cong-editor-area-labelled.h \
  cong-editor-area-line.h \
  cong-editor-area-pixbuf.h \
  cong-editor-area-spacer.h \
  cong-editor-area-text.h   \
  cong-editor-area-text-comment.h   \
  cong-editor-area-text-fragment.h   \
  cong-editor-area-span-tag.h \
  cong-editor-area-structural.h \
  cong-editor-area-structural-tag.h \
  cong-editor-area-underline.h \
  cong-editor-area-unknown-tag.h   \
  cong-editor-child-policy.h \
  cong-editor-child-policy-flow-holder.h \
  cong-editor-child-policy-inline.h \
  cong-editor-line-fragments.h \
  cong-editor-node.h        \
  cong-editor-node-comment.h \
  cong-editor-node-document.h \
  cong-editor-node-dtd.h  \
  cong-editor-node-element.h \
  cong-editor-node-element-span.h \
  cong-editor-node-element-structural.h \
  cong-editor-node-element-unknown.h \
  cong-editor-node-entity-decl.h \
  cong-editor-node-entity-ref.h \
  cong-editor-node-text.h        \
  cong-editor-node-unimplemented.h \
  cong-editor-widget.h      \
  cong-eel.h                \
  cong-eel-graphic-effects.h \
  cong-enum-mapping.h       \
  cong-error-dialog.h       \
  cong-fake-plugin-hooks.h  \
  cong-file-selection.h     \
  cong-font.h               \
  cong-graph.h              \
  cong-location.h           \
  cong-marshal.h            \
  cong-modification.h       \
  cong-modification-cursor-change.h \
  cong-modification-selection-change.h \
  cong-modification-set-dtd-ptr.h \
  cong-node.h               \
  cong-node-modification.h  \
  cong-node-modification-make-orphan.h  \
  cong-node-modification-add-after.h  \
  cong-node-modification-add-before.h  \
  cong-node-modification-set-parent.h  \
  cong-node-modification-set-text.h  \
  cong-node-modification-set-attribute.h  \
  cong-node-modification-remove-attribute.h  \
  cong-object.h      \
  cong-overview-view.h      \
  cong-parser-error.h       \
  cong-plugin.h             \
  cong-plugin-manager.h     \
  cong-primary-window.h     \
  cong-progress-checklist.h \
  cong-range.h              \
  cong-selection.h          \
  cong-service.h            \
  cong-service-doc-tool.h   \
  cong-service-document-factory.h \
  cong-service-editor-node-factory.h \
  cong-service-exporter.h   \
  cong-service-importer.h   \
  cong-service-node-property-dialog.h \
  cong-service-node-tool.h  \
  cong-service-print-method.h \
  cong-service-tool.h \
  cong-text-cache.h         \
  cong-traversal-node.h     \
  cong-tree-view.h          \
  cong-ui-hooks.h           \
  cong-util.h               \
  cong-vfs.h                \
  cong-view.h               \
  cong-xpath-expression.h   \
  fo.h                      \
  gxx-declare-object-from-xml-tree.h \
  gxx-declare-object-to-xml-tree.h \
  gxx-object-from-xml-tree.h \
  gxx-object-to-xml-tree.h \
  gxx-undefine-shared-macros.h \
  cong-app.c                \
  cong-attribute-editor.c   \
  cong-attribute-editor-cdata.c \
  cong-attribute-editor-enumeration.c \
  cong-attribute-wrapper.c   \
  cong-attribute-wrapper-check-button.c \
  cong-attribute-wrapper-radio-button.c \
  cong-command.c            \
  cong-command-history.c    \
  cong-debug-log-view.c     \
  cong-dialog.c             \
  cong-dispspec.c           \
  cong-dispspec-element.c   \
  cong-dispspec-registry.c  \
  cong-document.c           \
  cong-document-traversal.c \
  cong-dom-view.c           \
  cong-dtd.c                \
  cong-edit-find-and-replace.c \
  cong-edit-preferences.c   \
  cong-editor-area.c        \
  cong-editor-area-bin.c    \
  cong-editor-area-border.c \
  cong-editor-area-composer.c \
  cong-editor-area-container.c \
  cong-editor-area-entity-decl.c \
  cong-editor-area-entity-ref.c \
  cong-editor-area-expander.c \
  cong-editor-area-flow-holder.c \
  cong-editor-area-flow-holder-blocks.c \
  cong-editor-area-flow-holder-inlines.c \
  cong-editor-area-flow-holder-single.c \
  cong-editor-area-labelled.c \
  cong-editor-area-line.c \
  cong-editor-area-pixbuf.c \
  cong-editor-area-spacer.c \
  cong-editor-area-text.c   \
  cong-editor-area-text-comment.c   \
  cong-editor-area-text-fragment.c   \
  cong-editor-area-span-tag.c \
  cong-editor-area-structural.c \
  cong-editor-area-structural-tag.c \
  cong-editor-area-underline.c \
  cong-editor-area-unknown-tag.c   \
  cong-editor-child-policy.c \
  cong-editor-child-policy-flow-holder.c \
  cong-editor-child-policy-inline.c \
  cong-editor-line-fragments.c \
  cong-editor-node.c        \
  cong-editor-node-comment.c \
  cong-editor-node-document.c \
  cong-editor-node-dtd.c  \
  cong-editor-node-element.c \
  cong-editor-node-element-span.c \
  cong-editor-node-element-structural.c \
  cong-editor-node-element-unknown.c \
  cong-editor-node-entity-decl.c \
  cong-editor-node-entity-ref.c \
  cong-editor-node-text.c        \
  cong-editor-node-unimplemented.c \
  cong-editor-widget3.c     \
  cong-eel.c                \
  cong-eel-graphic-effects.c \
  cong-enum-mapping.c       \
  cong-error-dialog.c       \
  cong-error-file-open.c    \
  cong-error-file-save.c    \
  cong-error-tests.c        \
  cong-file-new.c           \
  cong-file-open.c          \
  cong-file-save.c          \
  cong-file-export.c        \
  cong-file-import.c        \
  cong-file-print.c         \
  cong-file-properties.c    \
  cong-font.c               \
  cong-graph.c              \
  cong-location.c           \
  cong-marshal.c            \
  cong-menus.c              \
  cong-modification.c       \
  cong-modification-cursor-change.c \
  cong-modification-selection-change.c \
  cong-modification-set-dtd-ptr.c \
  cong-node.c               \
  cong-node-modification.c  \
  cong-node-modification-make-orphan.c  \
  cong-node-modification-add-after.c  \
  cong-node-modification-add-before.c  \
  cong-node-modification-set-parent.c  \
  cong-node-modification-set-text.c  \
  cong-node-modification-set-attribute.c  \
  cong-node-modification-remove-attribute.c  \
  cong-node-properties-dialog.c \
  cong-overview-view.c      \
  cong-parser-error.c       \
  cong-plugin.c             \
  cong-plugin-manager.c     \
  cong-primary-window.c     \
  cong-progress-checklist.c \
  cong-range.c              \
  cong-service.c            \
  cong-service-doc-tool.c   \
  cong-service-document-factory.c \
  cong-service-editor-node-factory.c \
  cong-service-exporter.c   \
  cong-service-importer.c   \
  cong-service-node-property-dialog.c \
  cong-service-node-tool.c  \
  cong-service-print-method.c \
  cong-service-tool.c       \
  cong-source-view.c        \
  cong-text-cache.c         \
  cong-traversal-node.c     \
  cong-tree-view.c          \
  cong-util.c               \
  cong-vfs.c                \
  cong-view.c               \
  cong-xpath-expression.c   \
  gxx-impl-object-to-xml-tree.c \
  icon_assemble.c           \
  icon_connect.c            \
  icon_new.c                \
  icon_openfile.c           \
  icon_submit.c             \
  ilogo.c                   \
  auth_on.c                 \
  auth_off.c                \
  position.c                \
  cursor.c                  \
  select.c                  \
  popup.c                   \
  tree.c                    \
  tchoice.c                 \
  file.c                    \
  xmldata.c                 \
  xmledit.c                 \
  xmlload.c                 \
  xmlview.c                 \
  plugin-abiword.c          \
  plugin-admonition.c       \
  plugin-admonition-node-element.h \
  plugin-admonition-node-element.c \
  plugin-cleanup-source.c   \
  plugin-convert-case.c     \
  plugin-docbook.c          \
  plugin-templates.c        \
  plugin-dtd.c              \
  plugin-empty.c            \
  plugin-fo.c               \
  plugin-html.c             \
  plugin-lists.c            \
  plugin-lists-area-listitem.h \
  plugin-lists-area-listitem.c \
  plugin-lists-node-element-listitem.h \
  plugin-lists-node-element-listitem.c \
  plugin-paragraph.c            \
  plugin-paragraph-area-paragraph.h \
  plugin-paragraph-area-paragraph.c \
  plugin-paragraph-node-element-paragraph.h \
  plugin-paragraph-node-element-paragraph.c \
  plugin-random.c    \
  plugin-relaxng.c          \
  plugin-save-dispspec.c    \
  plugin-sgml.c             \
  plugin-tests.c            \
  plugin-tei.c              \
  plugin-validate.c         \
  plugin-website.c          \
  plugin-xsl.c              \
  main.c		    \
  $(printing_sources)

INCLUDES = $(CONGLOMERATE_CFLAGS) \
	$(PRINTING_CFLAGS) \
	$(LIBFO_CFLAGS) \
	$(GTKSOURCEVIEW_CFLAGS) \
	-DLOCALEDIR=\""$(datadir)/locale"\" \
	-DPREFIX=\""$(prefix)"\" \
	-DSYSCONFDIR=\""$(sysconfdir)/conglomerate"\" \
	-DDATADIR=\""$(datadir)"\" \
	-DLIBDIR=\""$(libdir)/conglomerate"\" \
	$(NULL)

conglomerate_LDADD  = $(CONGLOMERATE_LIBS) \
	$(PRINTING_LIBS) \
	$(LIBFO_LIBS) \
	$(GTKSOURCEVIEW_LIBS) \
	$(NULL)

EXTRA_DIST = Makefile.win cong.marshal

cong-marshal.h: cong.marshal
	glib-genmarshal $< --header --prefix=cong_cclosure_marshal > $@

cong-marshal.c: cong.marshal
	glib-genmarshal $< --body --prefix=cong_cclosure_marshal > $@


## Last Line
